<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pl.edu.agh.mkulpa.dentaise.mobile.EditVisitActivity">

    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text" >

            <TextView
                android:id="@+id/visit_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/visit_date_label" />

            <EditText
                android:id="@+id/visit_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/work_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:orientation="vertical">

        </LinearLayout>
        <Button
            android:id="@+id/add_work_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_work_button"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text" >

            <TextView
                android:id="@+id/visit_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/visit_notes_label" />

            <EditText
                android:id="@+id/visit_notes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
